--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,12 @@ body {
   --text-decoration-color: #ff9a00;
 }
 
+.theme-change-wrapper {
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+}
+
 .container {
   margin: 0 auto;
   padding: 0 30px;
@@ -41,9 +47,7 @@ body {
 }
 
 .resume {
-  margin: 50px auto;
-  border: 1px solid #f5f5f5;
-  box-shadow: 1px 1px 7px 7px #f5f5f5;
+  margin: 0 auto;
   padding: 30px 0;
   max-width: 900px;
 }
